--- a/src/universidadg8/vistas/JfIndex.form
+++ b/src/universidadg8/vistas/JfIndex.form
@@ -557,7 +557,7 @@
                                       <Group type="102" attributes="0">
                                           <Component id="jlIconBorrarAlum" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="button5" max="32767" attributes="0"/>
+                                          <Component id="JBBorrarAlumno" max="32767" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Group type="103" groupAlignment="0" attributes="0">
@@ -567,7 +567,7 @@
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Component id="jbListarAlumnos" max="32767" attributes="0"/>
-                                              <Component id="button8" max="32767" attributes="0"/>
+                                              <Component id="JBBuscarAlumnoPorID" max="32767" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
@@ -623,12 +623,12 @@
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="jlIconBuscarAlumID" min="-2" max="-2" attributes="0"/>
-                                      <Component id="button8" min="-2" pref="50" max="-2" attributes="0"/>
+                                      <Component id="JBBuscarAlumnoPorID" min="-2" pref="50" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="jlIconBorrarAlum" min="-2" max="-2" attributes="0"/>
-                                      <Component id="button5" min="-2" pref="50" max="-2" attributes="0"/>
+                                      <Component id="JBBorrarAlumno" min="-2" pref="50" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
                               </Group>
@@ -717,13 +717,16 @@
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="java.awt.Button" name="button5">
+                <Component class="java.awt.Button" name="JBBorrarAlumno">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Yu Gothic Medium" size="14" style="0"/>
                     </Property>
                     <Property name="label" type="java.lang.String" value="Borrar Alumno"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JBBorrarAlumnoActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="java.awt.Button" name="jbListarAlumnos">
                   <Properties>
@@ -732,6 +735,9 @@
                     </Property>
                     <Property name="label" type="java.lang.String" value="Listar Alumnos"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbListarAlumnosActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="java.awt.Button" name="jbActualizarAlumno">
                   <Properties>
@@ -755,13 +761,16 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbGuardarAlumnoActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="java.awt.Button" name="button8">
+                <Component class="java.awt.Button" name="JBBuscarAlumnoPorID">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Yu Gothic Medium" size="14" style="0"/>
                     </Property>
                     <Property name="label" type="java.lang.String" value="Buscar Legajo"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JBBuscarAlumnoPorIDActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jlIconBorrarAlum">
                   <Properties>
