--- a/src/universidadg8/vistas/JfIndex.form
+++ b/src/universidadg8/vistas/JfIndex.form
@@ -643,7 +643,7 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="contentAlumno1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="contentInscripcion" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="266" max="32767" attributes="0"/>
                   </Group>
@@ -658,7 +658,7 @@
                           <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="contentAlumno1" max="32767" attributes="0"/>
+                      <Component id="contentInscripcion" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -680,7 +680,7 @@
                 </Property>
               </Properties>
             </Component>
-            <Container class="javax.swing.JPanel" name="contentAlumno1">
+            <Container class="javax.swing.JPanel" name="contentInscripcion">
 
               <Layout>
                 <DimensionLayout dim="0">
@@ -724,7 +724,7 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="contentAlumno2" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="contentConsultas" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="266" max="32767" attributes="0"/>
                   </Group>
@@ -739,7 +739,7 @@
                           <Component id="jLabel15" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
-                      <Component id="contentAlumno2" max="32767" attributes="0"/>
+                      <Component id="contentConsultas" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -761,7 +761,7 @@
                 </Property>
               </Properties>
             </Component>
-            <Container class="javax.swing.JPanel" name="contentAlumno2">
+            <Container class="javax.swing.JPanel" name="contentConsultas">
 
               <Layout>
                 <DimensionLayout dim="0">
