--- a/src/universidadg8/vistas/JPGuardarAlumno.form
+++ b/src/universidadg8/vistas/JPGuardarAlumno.form
@@ -172,11 +172,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Borrar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbBorrarGuardarAlumnoActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jbGuardarGuardarAlumno">
       <Properties>
         <Property name="text" type="java.lang.String" value="Guardar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbGuardarGuardarAlumnoActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
