--- a/src/universidadg8/vistas/JPGuardarAlumno.form
+++ b/src/universidadg8/vistas/JPGuardarAlumno.form
@@ -52,11 +52,19 @@
                           <Component id="jlApellidoGuardarAlumno" alignment="1" min="-2" pref="100" max="-2" attributes="0"/>
                           <Component id="jlDNIGuardarAlumno" alignment="1" min="-2" pref="100" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jtfApellidoGuardarAlumno" min="-2" pref="205" max="-2" attributes="0"/>
-                          <Component id="jtfNombreGuardarAlumno" min="-2" pref="205" max="-2" attributes="0"/>
-                          <Component id="jtfDNIGuardarAlumno" alignment="0" min="-2" pref="205" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="jtfApellidoGuardarAlumno" min="-2" pref="205" max="-2" attributes="0"/>
+                                  <Component id="jtfNombreGuardarAlumno" min="-2" pref="205" max="-2" attributes="0"/>
+                                  <Component id="jtfDNIGuardarAlumno" alignment="0" min="-2" pref="205" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+                              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -71,7 +79,6 @@
                           <Component id="jCalGuardarAlumno" min="-2" pref="209" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="20" max="32767" attributes="0"/>
           </Group>
@@ -80,9 +87,9 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" pref="44" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jtfNombreGuardarAlumno" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                   <Component id="jlNombreGuardarAlumno" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
