--- a/src/universidadg8/vistas/JPModificarAlumno.form
+++ b/src/universidadg8/vistas/JPModificarAlumno.form
@@ -47,7 +47,7 @@
                                   <Component id="jlNomActualizarAlumno" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="jlFechaActualizarAlumno" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                      <Component id="jLabel1" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="jlLegajoActualizarAlumno" alignment="0" max="32767" attributes="0"/>
                                       <Component id="jlDNIActualizarAlumno" alignment="0" max="32767" attributes="0"/>
                                       <Component id="jlApeActualizarAlumno" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
@@ -103,7 +103,7 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel1" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
+                  <Component id="jlLegajoActualizarAlumno" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
                   <Component id="jtfIDAlumActualizarAlumno" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -173,7 +173,7 @@
         <Property name="text" type="java.lang.String" value="Fecha Nacimiento"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel1">
+    <Component class="javax.swing.JLabel" name="jlLegajoActualizarAlumno">
       <Properties>
         <Property name="text" type="java.lang.String" value="Legajo"/>
       </Properties>
@@ -198,6 +198,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Actualizar Datos"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbActualizarActualizarAlumnoActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
